--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -24,5 +24,6 @@
   "an10.219:7.1": "Этот ученик Благородных, монахи, который лишён жажды, лишён недоброжелательности, не имеет замешательства, бдительный, постоянно осознанный, пребывает, наполняя первую сторону света умом, наполненным состраданием… ",
   "an10.219:7.2": "сорадованием… ",
   "an10.219:7.3": "Он пребывает, наполняя первую сторону света умом, насыщенным невозмутимостью, равно как и вторую сторону, третью сторону, и четвёртую сторону. ",
-  "an10.219:7.4": "Так, вверху, внизу, вокруг и всюду, как ко всем, так и к самому себе, он наполняет весь мир умом, наполненным доброжелательностью – обильным, обширным, неизмеримым, не имеющим враждебности и недоброжелательности. "
+  "an10.219:7.4": "Так, вверху, внизу, вокруг и всюду, как ко всем, так и к самому себе, он наполняет весь мир умом, наполненным доброжелательностью – обильным, обширным, неизмеримым, не имеющим враждебности и недоброжелательности. ",
+  "an10.219:8.1": "Он понимает так: "
 }
