Translations by neptunao to translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json

--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -25,5 +25,6 @@
   "an10.219:7.2": "сорадованием… ",
   "an10.219:7.3": "Он пребывает, наполняя первую сторону света умом, насыщенным невозмутимостью, равно как и вторую сторону, третью сторону, и четвёртую сторону. ",
   "an10.219:7.4": "Так, вверху, внизу, вокруг и всюду, как ко всем, так и к самому себе, он наполняет весь мир умом, наполненным доброжелательностью – обильным, обширным, неизмеримым, не имеющим враждебности и недоброжелательности. ",
-  "an10.219:8.1": "Он понимает так: "
+  "an10.219:8.1": "Он понимает так: ",
+  "an10.219:8.2": "«Прежде мой ум был ограничен и неразвит, но теперь он безграничен и развит. Здесь не остаётся и не наличествует измеримой каммы». "
 }
