--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -27,5 +27,6 @@
   "an10.219:7.4": "Так, вверху, внизу, вокруг и всюду, как ко всем, так и к самому себе, он наполняет весь мир умом, наполненным доброжелательностью – обильным, обширным, неизмеримым, не имеющим враждебности и недоброжелательности. ",
   "an10.219:8.1": "Он понимает так: ",
   "an10.219:8.2": "«Прежде мой ум был ограничен и неразвит, но теперь он безграничен и развит. Здесь не остаётся и не наличествует измеримой каммы». ",
-  "an10.219:9.1": "Как вы думаете, монахи, "
+  "an10.219:9.1": "Как вы думаете, монахи, ",
+  "an10.219:9.2": "если бы малыш развивал освобождение ума невозмутимостью с самого детства, смог бы он совершить плохой поступок?» "
 }
