Translations by neptunao to translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json

--- a/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
+++ b/translation/ru/sv/sutta/an/an10/an10.219_translation-ru-sv.json
@@ -34,5 +34,6 @@
   "an10.219:10.2": "«Нет, Учитель. ",
   "an10.219:10.3": "Ведь с чего бы страдание могло охватить того, кто не совершает плохого поступка?» ",
   "an10.219:11.1": "«Поэтому мужчине или женщине нужно развивать это освобождение ума невозмутимостью. ",
-  "an10.219:11.2": "Мужчина или женщина не смогут забрать с собой это тело, когда придёт пора уходить. "
+  "an10.219:11.2": "Мужчина или женщина не смогут забрать с собой это тело, когда придёт пора уходить. ",
+  "an10.219:11.3": "У смертных ум является их сердцевиной. "
 }
