Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti82_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti82:5.3": "al discepolo del Buddha perfettamente risvegliato ",
   "iti82:5.4": "nella sua grande maestria. ",
   "iti82:6.1": "‘Ode al purosangue! ",
-  "iti82:6.2": "Hai vinto una battaglia difficile da vincere! ",
+  "iti82:6.2": "Hai vinto la battaglia difficile da vincere! ",
   "iti82:6.3": "Adesso che hai sconfitto l’esercito della morte ",
   "iti82:6.4": "non hai più ostacoli nella liberazione.’ ",
   "iti82:7.1": "Così i Deva rendono omaggio ",
