--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -1,3 +1,4 @@
 {
-  "thig7.1:0.1": "Стихи старших монахинь 7.1 "
+  "thig7.1:0.1": "Стихи старших монахинь 7.1 ",
+  "thig7.1:0.2": "Семь строф "
 }
