Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -3,5 +3,6 @@
   "thig7.1:0.2": "Семь строф ",
   "thig7.1:0.3": "Уттара Тхери (вторая) ",
   "thig7.1:1.1": "«Пашут землю люди, ",
-  "thig7.1:1.2": "В землю семена сажают. "
+  "thig7.1:1.2": "В землю семена сажают. ",
+  "thig7.1:1.3": "Поддерживая детей и жён, "
 }
