--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -5,5 +5,6 @@
   "thig7.1:1.1": "«Пашут землю люди, ",
   "thig7.1:1.2": "В землю семена сажают. ",
   "thig7.1:1.3": "Поддерживая детей и жён, ",
-  "thig7.1:1.4": "Богатство стяжают. "
+  "thig7.1:1.4": "Богатство стяжают. ",
+  "thig7.1:2.1": "Вы наставленьям Будды следуйте, "
 }
