--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -7,5 +7,6 @@
   "thig7.1:1.3": "Поддерживая детей и жён, ",
   "thig7.1:1.4": "Богатство стяжают. ",
   "thig7.1:2.1": "Вы наставленьям Будды следуйте, ",
-  "thig7.1:2.2": "Чтоб не кручиниться потом. "
+  "thig7.1:2.2": "Чтоб не кручиниться потом. ",
+  "thig7.1:2.3": "Омойте стопы, "
 }
