--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -9,5 +9,6 @@
   "thig7.1:2.1": "Вы наставленьям Будды следуйте, ",
   "thig7.1:2.2": "Чтоб не кручиниться потом. ",
   "thig7.1:2.3": "Омойте стопы, ",
-  "thig7.1:2.4": "В уединенье пребывайте. "
+  "thig7.1:2.4": "В уединенье пребывайте. ",
+  "thig7.1:3.1": "С умом, соединённым воедино, "
 }
