--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig7.1:2.3": "Омойте стопы, ",
   "thig7.1:2.4": "В уединенье пребывайте. ",
   "thig7.1:3.1": "С умом, соединённым воедино, ",
-  "thig7.1:3.2": "Хорошо собранным "
+  "thig7.1:3.2": "Хорошо собранным ",
+  "thig7.1:3.3": "Созерцайте составное "
 }
