Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,5 @@
   "thig7.1:3.2": "Хорошо собранным ",
   "thig7.1:3.3": "Созерцайте составное ",
   "thig7.1:3.4": "Словно чужое, не своё.» ",
-  "thig7.1:4.1": "« "
+  "thig7.1:4.1": "«Услышав слова такие, Патачары поученья, "
 }
