--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig7.1:3.2": "Хорошо собранным ",
   "thig7.1:3.3": "Созерцайте составное ",
   "thig7.1:3.4": "Словно чужое, не своё.» ",
-  "thig7.1:4.1": "«Услышав слова такие, Патачары поученья, "
+  "thig7.1:4.1": "«Услышав слова такие, Патачары поученья, ",
+  "thig7.1:4.3": "Омыла стопы я, ушла в уединенье. "
 }
