--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig7.1:3.4": "Словно чужое, не своё.» ",
   "thig7.1:4.1": "«Услышав слова такие, Патачары поученья, ",
   "thig7.1:4.3": "Омыла стопы я, ушла в уединенье. ",
-  "thig7.1:5.2": "В первой части ночи вспомнила прошлыеобители свои, "
+  "thig7.1:5.2": "В первой части ночи вспомнила прошлыеобители свои, ",
+  "thig7.1:5.4": "А во второй обрела божественное око, "
 }
