--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -18,5 +18,6 @@
   "thig7.1:4.3": "Омыла стопы я, ушла в уединенье. ",
   "thig7.1:5.2": "В первой части ночи вспомнила прошлыеобители свои, ",
   "thig7.1:5.4": "А во второй обрела божественное око, ",
-  "thig7.1:6.2": "Всю тьму рассеяла в последней части ночи. "
+  "thig7.1:6.2": "Всю тьму рассеяла в последней части ночи. ",
+  "thig7.1:6.3": "Я обладательница Трёх знаний, "
 }
