Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig7.1:5.4": "А во второй обрела божественное око, ",
   "thig7.1:6.2": "Всю тьму рассеяла в последней части ночи. ",
   "thig7.1:6.3": "Я обладательница Трёх знаний, ",
-  "thig7.1:6.4": "Лишённая влечений. "
+  "thig7.1:6.4": "Лишённая влечений. ",
+  "thig7.1:7.1": "Я буду почитать тебя, как тридцать дэвов Сакку почитают, "
 }
