Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.1_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig7.1:6.3": "Я обладательница Трёх знаний, ",
   "thig7.1:6.4": "Лишённая влечений. ",
   "thig7.1:7.1": "Я буду почитать тебя, как тридцать дэвов Сакку почитают, ",
-  "thig7.1:7.3": "Непобедимого в битве! "
+  "thig7.1:7.3": "Непобедимого в битве! ",
+  "thig7.1:7.4": "Я обладательница Трёх знаний, <j>Лишённая влечений. "
 }
