--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -1,5 +1,6 @@
 {
   "thig7.2:0.1": "Стихи старших монахинь 7.2 ",
   "thig7.2:0.2": "Семь строф ",
-  "thig7.2:0.3": "Чала Тхери "
+  "thig7.2:0.3": "Чала Тхери ",
+  "thig7.2:1.1": "Бхиккхуни, в памятовании утверждённая, "
 }
