--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -5,5 +5,6 @@
   "thig7.2:1.1": "«Бхиккхуни, в памятовании утверждённая, ",
   "thig7.2:1.2": "Со способностями хорошо взращёнными, ",
   "thig7.2:1.3": "Я обрела покоя состоянье ",
-  "thig7.2:1.4": "И умопостроений умирение блаженное.» "
+  "thig7.2:1.4": "И умопостроений умирение блаженное.» ",
+  "thig7.2:2.1": "Ради кого ты голову обрила? "
 }
