--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -6,7 +6,7 @@
   "thig7.2:1.2": "Со способностями хорошо взращёнными, ",
   "thig7.2:1.3": "Я обрела покоя состоянье ",
   "thig7.2:1.4": "И умопостроений умирение блаженное.» ",
-  "thig7.2:2.1": "Ради кого ты голову обрила? ",
+  "thig7.2:2.1": "«Ради кого ты голову обрила? ",
   "thig7.2:2.2": "Отшельницей ты выглядишь, ",
   "thig7.2:2.3": "Но не веришь ты воззреньям никаким, ",
   "thig7.2:2.4": "Зачем же бродишь неприкаянной? "
