Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig7.2:2.3": "Но не веришь ты воззреньям никаким, ",
   "thig7.2:2.4": "Зачем же бродишь неприкаянной?» ",
   "thig7.2:3.1": "«На воззрения чужаки опираются, ",
-  "thig7.2:3.3": "Дхамму не ведающие, "
+  "thig7.2:3.3": "Дхамму не ведающие, ",
+  "thig7.2:3.4": "Дхаммы не знающие. "
 }
