--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig7.2:3.1": "«На воззрения чужаки опираются, ",
   "thig7.2:3.3": "Дхамму не ведающие, ",
   "thig7.2:3.4": "Дхаммы не знающие. ",
-  "thig7.2:4.1": "Рождён был в клане Сакьев "
+  "thig7.2:4.1": "Рождён был в клане Сакьев ",
+  "thig7.2:4.2": "Будда, Непревзойдённый; "
 }
