--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig7.2:3.4": "Дхаммы не знающие. ",
   "thig7.2:4.1": "Рождён был в клане Сакьев ",
   "thig7.2:4.2": "Будда, Непревзойдённый; ",
-  "thig7.2:4.3": "Он наставлял меня в Дхамме, "
+  "thig7.2:4.3": "Он наставлял меня в Дхамме, ",
+  "thig7.2:4.4": "Что превосходит любые воззренья. "
 }
