Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -16,5 +16,6 @@
   "thig7.2:4.1": "Рождён был в клане Сакьев ",
   "thig7.2:4.2": "Будда, Непревзойдённый; ",
   "thig7.2:4.3": "Он наставлял меня в Дхамме, ",
-  "thig7.2:4.4": "Что превосходит любые воззренья. "
+  "thig7.2:4.4": "Что превосходит любые воззренья. ",
+  "thig7.2:5.1": "Страданье, зарождение страданья, "
 }
