--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -19,5 +19,6 @@
   "thig7.2:4.4": "Что превосходит любые воззренья. ",
   "thig7.2:5.1": "Страданье, зарождение страданья, ",
   "thig7.2:5.2": "Унятие страданья ",
-  "thig7.2:5.3": "И благородный путь, "
+  "thig7.2:5.3": "И благородный путь, ",
+  "thig7.2:5.4": "К унятию страданья что ведёт. "
 }
