--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -21,5 +21,6 @@
   "thig7.2:5.2": "Унятие страданья ",
   "thig7.2:5.3": "И благородный путь, ",
   "thig7.2:5.4": "К унятию страданья что ведёт. ",
-  "thig7.2:6.1": "Слова его услышав, "
+  "thig7.2:6.1": "Слова его услышав, ",
+  "thig7.2:6.2": "Учению обрадовалась я. "
 }
