Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig7.2:5.3": "И благородный путь, ",
   "thig7.2:5.4": "К унятию страданья что ведёт. ",
   "thig7.2:6.1": "Слова его услышав, ",
-  "thig7.2:6.2": "Учению обрадовалась я. "
+  "thig7.2:6.2": "Учению обрадовалась я. ",
+  "thig7.2:6.3": "Три знания открылись для меня, "
 }
