--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -24,5 +24,6 @@
   "thig7.2:6.1": "Слова его услышав, ",
   "thig7.2:6.2": "Учению обрадовалась я. ",
   "thig7.2:6.3": "Три знания открылись для меня, ",
-  "thig7.2:6.4": "Заветы Татхагаты мной исполнены всецело. "
+  "thig7.2:6.4": "Заветы Татхагаты мной исполнены всецело. ",
+  "thig7.2:7.1": "Всё наслаждение сокрушено, "
 }
