--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -25,5 +25,6 @@
   "thig7.2:6.2": "Учению обрадовалась я. ",
   "thig7.2:6.3": "Три знания открылись для меня, ",
   "thig7.2:6.4": "Заветы Татхагаты мной исполнены всецело. ",
-  "thig7.2:7.1": "Всё наслаждение сокрушено, "
+  "thig7.2:7.1": "Всё наслаждение сокрушено, ",
+  "thig7.2:7.2": "Пучина тьмы рассеяна, "
 }
