--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.2_translation-ru-narinyanievmenenko.json
@@ -26,5 +26,6 @@
   "thig7.2:6.3": "Три знания открылись для меня, ",
   "thig7.2:6.4": "Заветы Татхагаты мной исполнены всецело. ",
   "thig7.2:7.1": "Всё наслаждение сокрушено, ",
-  "thig7.2:7.2": "Пучина тьмы рассеяна, "
+  "thig7.2:7.2": "Пучина тьмы рассеяна, ",
+  "thig7.2:7.3": "Об этом зная, тебя я одолела, Лютый»! "
 }
