Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -1,5 +1,6 @@
 {
   "thig7.3:0.1": "Стихи старших монахинь 7.3 ",
   "thig7.3:0.2": "Семь строф ",
-  "thig7.3:0.3": "Упачала Тхери "
+  "thig7.3:0.3": "Упачала Тхери ",
+  "thig7.3:1.1": "Бхиккхуни — видящая, памятующая, "
 }
