--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -5,5 +5,5 @@
   "thig7.3:1.1": "«Бхиккхуни — видящая, памятующая, ",
   "thig7.3:1.2": "Со способностями хорошо взращёнными, ",
   "thig7.3:1.3": "Я обрела состояние покоя, ",
-  "thig7.3:1.4": "Что нечестивцам не знакомо. "
+  "thig7.3:1.4": "Что нечестивцам не знакомо.» "
 }
