Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -9,5 +9,6 @@
   "thig7.3:2.1": "«Рождения тебе чем не милы? ",
   "thig7.3:2.2": "Тот, кто рождён, вкушает радости земные. ",
   "thig7.3:2.3": "Так услаждай себя и ты, ",
-  "thig7.3:2.4": "Чтоб не кручиниться потом!» "
+  "thig7.3:2.4": "Чтоб не кручиниться потом!» ",
+  "thig7.3:3.1": "Тот, кто рождён, погибнуть должен —"
 }
