--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -11,5 +11,6 @@
   "thig7.3:2.3": "Так услаждай себя и ты, ",
   "thig7.3:2.4": "Чтоб не кручиниться потом!» ",
   "thig7.3:3.1": "Тот, кто рождён, погибнуть должен —",
-  "thig7.3:3.2": "Родившись, он к страданиям идёт: "
+  "thig7.3:3.2": "Родившись, он к страданиям идёт: ",
+  "thig7.3:3.3": "Ему отрезать могут ноги, руки, "
 }
