--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -12,5 +12,6 @@
   "thig7.3:2.4": "Чтоб не кручиниться потом!» ",
   "thig7.3:3.1": "Тот, кто рождён, погибнуть должен —",
   "thig7.3:3.2": "Родившись, он к страданиям идёт: ",
-  "thig7.3:3.3": "Ему отрезать могут ноги, руки, "
+  "thig7.3:3.3": "Ему отрезать могут ноги, руки, ",
+  "thig7.3:3.4": "Убить, в неволю заточить, <j>Подвергнуть мукам. "
 }
