--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -13,5 +13,6 @@
   "thig7.3:3.1": "Тот, кто рождён, погибнуть должен —",
   "thig7.3:3.2": "Родившись, он к страданиям идёт: ",
   "thig7.3:3.3": "Ему отрезать могут ноги, руки, ",
-  "thig7.3:3.4": "Убить, в неволю заточить, <j>Подвергнуть мукам. "
+  "thig7.3:3.4": "Убить, в неволю заточить, <j>Подвергнуть мукам. ",
+  "thig7.3:4.1": "Рождён был в клане Сакьев "
 }
