--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -14,5 +14,6 @@
   "thig7.3:3.2": "Родившись, он к страданиям идёт: ",
   "thig7.3:3.3": "Ему отрезать могут ноги, руки, ",
   "thig7.3:3.4": "Убить, в неволю заточить, <j>Подвергнуть мукам. ",
-  "thig7.3:4.1": "Рождён был в клане Сакьев "
+  "thig7.3:4.1": "Рождён был в клане Сакьев ",
+  "thig7.3:4.2": "Непревзойдённый Будда; "
 }
