Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig7.3:3.3": "Ему отрезать могут ноги, руки, ",
   "thig7.3:3.4": "Убить, в неволю заточить, <j>Подвергнуть мукам. ",
   "thig7.3:4.1": "Рождён был в клане Сакьев ",
-  "thig7.3:4.2": "Непревзойдённый Будда; "
+  "thig7.3:4.2": "Непревзойдённый Будда; ",
+  "thig7.3:4.3": "Он в Дхамме наставлял меня "
 }
