Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -17,5 +17,6 @@
   "thig7.3:4.1": "Рождён был в клане Сакьев ",
   "thig7.3:4.2": "Непревзойдённый Будда; ",
   "thig7.3:4.3": "Он в Дхамме наставлял меня ",
-  "thig7.3:4.4": "Во имя окончания рождений. "
+  "thig7.3:4.4": "Во имя окончания рождений. ",
+  "thig7.3:5.1": "Страданье, зарождение страданья, "
 }
