--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -19,5 +19,6 @@
   "thig7.3:4.3": "Он в Дхамме наставлял меня ",
   "thig7.3:4.4": "Во имя окончания рождений. ",
   "thig7.3:5.1": "Страданье, зарождение страданья, ",
-  "thig7.3:5.2": "Унятие страданья "
+  "thig7.3:5.2": "Унятие страданья ",
+  "thig7.3:5.3": "И благородный путь, "
 }
