Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -20,5 +20,6 @@
   "thig7.3:4.4": "Во имя окончания рождений. ",
   "thig7.3:5.1": "Страданье, зарождение страданья, ",
   "thig7.3:5.2": "Унятие страданья ",
-  "thig7.3:5.3": "И благородный путь, "
+  "thig7.3:5.3": "И благородный путь, ",
+  "thig7.3:5.4": "К унятию страданья что ведёт. "
 }
