Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -22,5 +22,6 @@
   "thig7.3:5.2": "Унятие страданья ",
   "thig7.3:5.3": "И благородный путь, ",
   "thig7.3:5.4": "К унятию страданья что ведёт. ",
-  "thig7.3:6.1": "Слова его услышав, "
+  "thig7.3:6.1": "Слова его услышав, ",
+  "thig7.3:6.2": "Учению обрадовалась я. "
 }
