--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -24,5 +24,6 @@
   "thig7.3:5.4": "К унятию страданья что ведёт. ",
   "thig7.3:6.1": "Слова его услышав, ",
   "thig7.3:6.2": "Учению обрадовалась я. ",
-  "thig7.3:6.3": "Три знания открылись для меня, "
+  "thig7.3:6.3": "Три знания открылись для меня, ",
+  "thig7.3:6.4": "Заветы Татхагаты мной исполнены всецело. "
 }
