Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -25,5 +25,6 @@
   "thig7.3:6.1": "Слова его услышав, ",
   "thig7.3:6.2": "Учению обрадовалась я. ",
   "thig7.3:6.3": "Три знания открылись для меня, ",
-  "thig7.3:6.4": "Заветы Татхагаты мной исполнены всецело. "
+  "thig7.3:6.4": "Заветы Татхагаты мной исполнены всецело. ",
+  "thig7.3:7.1": "Всё наслаждение сокрушено, "
 }
