--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig7.3_translation-ru-narinyanievmenenko.json
@@ -27,5 +27,6 @@
   "thig7.3:6.3": "Три знания открылись для меня, ",
   "thig7.3:6.4": "Заветы Татхагаты мной исполнены всецело. ",
   "thig7.3:7.1": "Всё наслаждение сокрушено, ",
-  "thig7.3:7.2": "Пучина тьмы рассеяна, "
+  "thig7.3:7.2": "Пучина тьмы рассеяна, ",
+  "thig7.3:7.3": "Об этом зная, тебя я одолела, Лютый»! "
 }
