--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti83:2.1": "“Cercatori, quando per un Deva arriva il momento di cadere giù da un gruppo di Deva, si manifestano cinque segni premonitori: ",
   "iti83:2.2": "le sue ghirlande di fiori si appassiscono, le sue vesti si macchiano, le sue ascelle iniziano a sudare, il suo corpo si abbrutisce e il Deva non è più soddisfatto del proprio trono paradisiaco. ",
-  "iti83:2.3": "Quando i Deva capiscono: ‘per questo giovane Deva è arrivato il momento di lasciarci,’ gli offrono tre lieti auguri: ",
+  "iti83:2.3": "Quando i Deva capiscono: ‘per questo Deva è arrivato il momento di lasciarci,’ gli offrono tre lieti auguri: ",
   "iti83:2.4": "‘Signore, che tu possa giungere da qui a una buona destinazione! ",
   "iti83:3.1": "Una volta arrivato a buona destinazione, che tu possa trovare un tesoro! ",
   "iti83:4.1": "Dopo aver trovato un tesoro, che tu possa stare ben al sicuro!’ ",
