--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti83:2.3": "Quando i Deva capiscono: ‘per questo Deva è arrivato il momento di lasciarci,’ gli offrono tre lieti auguri: ",
   "iti83:2.4": "‘Signore, vai a una buona destinazione! ",
   "iti83:3.1": "Arrivato a buona destinazione, trova ricchezza! ",
-  "iti83:4.1": "Dopo aver trovato un tesoro, che tu possa stare ben al sicuro!’ ",
+  "iti83:4.1": "Trovata ricchezza, sii al sicuro!’ ",
   "iti83:5.1": "Quando fu detto questo, uno dei cercatori chiese al Buddha: ",
   "iti83:5.2": "“Bhante, che cosa vuol dire giungere a una buona destinazione per i Deva? ",
   "iti83:6.1": "E cosa vuol dire trovare un tesoro per i Deva? ",
