--- a/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti83_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti83:6.1": "E cosa vuol dire trovare un ricchezza per i Deva? ",
   "iti83:7.1": "E cosa vuol dire stare ben al sicuro per i Deva?’ ",
   "iti83:8.1": "‘L’esistenza umana è chiamata una buona destinazione dai Deva. ",
-  "iti83:9.1": "Qualunque essere umano che ha fede nel Dhamma e nel Vinaya insegnati dal Buddha, ",
+  "iti83:9.1": "Qualunque essere umano che ha fede nell’insegnamento e nella disciplina insegnati dal Buddha, ",
   "iti83:9.2": "quello è chiamato dai Deva uno che ha trovato un tesoro. ",
   "iti83:10.1": "Quando quella fede è stabile, radicata, sicura, forte e irremovibile da parte di qualsiasi contemplativo, brahmana, Deva, Māra, Brahmā o da chiunque altro al mondo, ",
   "iti83:10.2": "quello è chiamato dai Deva stare ben al sicuro. ",
