--- a/translation/de/sabbamitta/sutta/an/an4/an4.26_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.26_translation-de-sabbamitta.json
@@ -10,7 +10,7 @@
   "an4.26:2.2": "unverschämt und zerstreut: ",
   "an4.26:2.3": "Solche wachsen nicht in der Lehre, ",
   "an4.26:2.4": "die vom vollkommenen Buddha gelehrt wurde. ",
-  "an4.26:3.1": "Doch wer aufrichtig ist, kein Schmeichler, sondern bedächtig, ",
+  "an4.26:3.1": "Doch wer echt ist, kein Schmeichler, sondern bedächtig, ",
   "an4.26:3.2": "zugänglich und gesammelt: ",
   "an4.26:3.3": "Solche wachsen in der Lehre, ",
   "an4.26:3.4": "die vom vollkommenen Buddha gelehrt wurde.“ "
