--- a/translation/it/soma/sutta/kn/iti/vagga4/iti30_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga4/iti30_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti30:3.1": "“Comportandosi male con il corpo, ",
   "iti30:3.2": "con la parola, ",
   "iti30:3.3": "e con la mente ",
-  "iti30:3.4": "in un modo ignorante e corrotto, ",
+  "iti30:3.4": "qualsiasi cosa sia corrotta, ",
   "iti30:4.1": "non compiendo (omettendo) buone azioni, ",
   "iti30:4.2": "ma molte nocive, ",
   "iti30:4.3": "quando il folle perisce, ",
