Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/iti/vagga11/iti108_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/iti/vagga11/iti108_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/iti/vagga11/iti108_translation-de-sabbamitta.json
@@ -14,7 +14,7 @@
   "iti108:3.2": "unverschämt und zerstreut: ",
   "iti108:3.3": "Solche wachsen nicht in der Lehre, ",
   "iti108:3.4": "die vom vollkommenen Buddha gelehrt wurde. ",
-  "iti108:4.1": "Doch wer aufrichtig ist, kein Schmeichler, sondern bedächtig, ",
+  "iti108:4.1": "Doch wer echt ist, kein Schmeichler, sondern bedächtig, ",
   "iti108:4.2": "zugänglich und gesammelt: ",
   "iti108:4.3": "Solche wachsen in der Lehre, ",
   "iti108:4.4": "die vom vollkommenen Buddha gelehrt wurde.“ ",
