Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn34_translation-de-sabbamitta.json
@@ -134,7 +134,7 @@
   "dn34:1.6.4": "Da hat ein Mönch Vertrauen zum Erwachen des Klargewordenen: ",
   "dn34:1.6.5": "‚Dieser Gesegnete ist vollendet, ein vollkommen erwachter Buddha, von vollendetem Wissen und Verhalten, heilig, Kenner der Welt, unübertrefflicher Anleiter für alle, die üben wollen, Lehrer von Göttern und Menschen, erwacht, gesegnet.‘ ",
   "dn34:1.6.6": "Er ist selten krank oder unwohl. Sein Magen verdaut gut, ist weder zu heiß noch zu kalt, sondern genau richtig und passend für die Meditation. ",
-  "dn34:1.6.7": "Er ist nicht verschlagen oder hinterhältig. Er vertraut sich aufrichtig dem Lehrer oder vernünftigen geistlichen Gefährten an. ",
+  "dn34:1.6.7": "Er ist nicht verschlagen oder hinterhältig. Er vertraut sich ehrlich dem Lehrer oder vernünftigen geistlichen Gefährten an. ",
   "dn34:1.6.8": "Er lebt so, dass er seine Energie aufrüttelt, um untaugliche Eigenschaften aufzugeben und sich taugliche Eigenschaften zu eigen zu machen. Er ist stark, beharrlich fest, und lässt nicht nach beim Entwickeln tauglicher Eigenschaften. ",
   "dn34:1.6.9": "Er ist weise. Er besitzt die Weisheit des Entstehens und Vergehens, die edel und durchdringend ist und zur völligen Auflösung des Leidens führt. ",
   "dn34:1.6.11": "Welche fünf Dinge müssen entwickelt werden? ",
