Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti84_translation-it-soma.json
@@ -21,5 +21,5 @@
   "iti84:7.1": "Quelli che grazie alla suprema guida ",
   "iti84:7.2": "seguono la via ben indicata, ",
   "iti84:7.3": "solerti nell’insegnamento di colui che è arrivato a buona destinazione (fortunato), ",
-  "iti84:7.4": "ottengono in questa vita la fine della sofferenza.” "
+  "iti84:7.4": "potano a termine in questa vita la sofferenza.” "
 }
