Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga5/iti39_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga5/iti39_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga5/iti39_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti39:2.1": "“Cercatori, il Tathāgata, l’Arahant, il Buddha perfettamente risvegliato, insegna il Dhamma in due modi. ",
+  "iti39:2.1": "“Cercatori, colui che è arrivato alla verità, l’Arahant, il Buddha perfettamente risvegliato, insegna il Dhamma in due modi. ",
   "iti39:2.2": "Quali due? ",
   "iti39:2.3": "‘Vedete il male come il male’, ",
   "iti39:2.4": "questo è il primo insegnamento. ",
