Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn11/sn11.16_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn11/sn11.16_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn11/sn11.16_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "sn11.16:2.4": "wo ist eine Gabe äußerst fruchtbar?“ ",
   "sn11.16:3.1": "„Vier, die den Pfad üben, ",
   "sn11.16:3.2": "und vier, die bei der Frucht verankert sind: ",
-  "sn11.16:3.3": "Das ist der aufrechte Saṅgha ",
+  "sn11.16:3.3": "Das ist der aufrichtige Saṅgha ",
   "sn11.16:3.4": "mit Weisheit, Sittlichkeit und Versenkung. ",
   "sn11.16:4.1": "Für Menschen auf der Suche nach Verdienst, ",
   "sn11.16:4.2": "die Opfer spenden ",
