Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti85:2.1": "Cercatori, meditate contemplando il non bello nel corpo. ",
   "iti85:2.2": "Lasciate prima di tutto che la consapevolezza (vigilanza) del respiro sia ben consolidata internamente ",
-  "iti85:2.3": "e poi meditate osservando l’impersistenza/impermanenza di ogni attività (condizione/dinamica). ",
+  "iti85:2.3": "e meditate osservando l’impersistenza/impermanenza di ogni cosa (condizione/dinamica). ",
   "iti85:2.4": "Se si contempla il non bello (la bruttezza) nel corpo, qualunque tendenza latente verso la passione per il bello (la bellezza) verrà abbandonata. ",
   "iti85:2.5": "Se la consapevolezza del respiro sarà prima di tutto ben consolidata internamente, qualsiasi inclinazione verso pensieri problematici esterni cesserà di esistere. ",
   "iti85:2.6": "Se si contempla l’impersistenza/impermanenza di ogni attività (condizione/dinamica), l’ignoranza viene abbandonata e la sapienza sorge. ",
