Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti85:2.1": "Cercatori, meditate contemplando il non bello nel corpo. ",
+  "iti85:2.1": "Cercatori, meditate contemplando il non bello (il ripugnante) nel corpo. ",
   "iti85:2.2": "Lasciate prima di tutto che la consapevolezza (vigilanza) del respiro sia ben consolidata internamente ",
   "iti85:2.3": "e meditate osservando l’impersistenza/impermanenza (CHANGE anicca everywhere to non persistente) di ogni condizione (cosa / UPDATE EVERY TRANSLATION condizione or creazione). ",
   "iti85:2.4": "Se si contempla il non bello nel corpo, qualunque tendenza latente verso la passione per la bellezza verrà abbandonata. ",
