Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga9/iti85_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti85:2.6": "Se si contempla l’impersistenza/impermanenza di ogni condizione (creazione???), l’ignoranza viene abbandonata e la sapienza sorge. ",
   "iti85:3.1": "Un cercatore, che con continuo ardore (zelo) contempla il non bello nel corpo ",
   "iti85:3.2": "e che, consapevole (vigile) del respiro, ",
-  "iti85:3.3": "tranquillizza tutte le attività (condizioni/dinamiche) ",
+  "iti85:3.3": "tranquillizza tutte le condizioni (creazioni) ",
   "iti85:3.4": "che trova, ",
   "iti85:4.1": "vede nel modo giusto (correttamente)* ",
   "iti85:4.2": "e in questo modo si libera. ",
