Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/dhp/dhp100-115_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp100-115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp100-115_translation-de-sabbamitta.json
@@ -41,7 +41,7 @@
   "dhp108:1": "Welches Opfer einer, der Verdienst sucht, ",
   "dhp108:2": "in der Welt auch darbringen mag, ",
   "dhp108:3": "keins ist ein Viertel davon wert, ",
-  "dhp108:4": "sich vor den Aufrechten zu verbeugen. ",
+  "dhp108:4": "sich vor den Aufrichtigen zu verbeugen. ",
   "dhp109:1": "Für jemanden, der Verbeugen zur Gewohnheit hat ",
   "dhp109:2": "und stets die Ältesten ehrt, ",
   "dhp109:3": "nehmen vier Dinge zu: ",
