Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thag/thag16.6_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thag/thag16.6_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thag/thag16.6_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "thag16.6:2.3": "die Kennzeichen eines großen Mannes, ",
   "thag16.6:2.4": "all das findet sich an deinem Körper. ",
   "thag16.6:3.1": "Deine Augen sind klar, dein Gesicht ist schön, ",
-  "thag16.6:3.2": "du bist gewaltig, aufrecht, majestätisch. ",
+  "thag16.6:3.2": "du bist gewaltig, aufrichtig, majestätisch. ",
   "thag16.6:3.3": "Inmitten des Saṅgha der Asketen ",
   "thag16.6:3.4": "strahlst du wie die Sonne. ",
   "thag16.6:4.1": "Du bist ein Mönch, den zu sehen gut ist, ",
