Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga1/iti1_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti1:3.2": "le creature giungono a una cattiva destinazione (cattivo destino). ",
   "iti1:3.3": "Quando si comprende correttamente (nel modo giusto ) quella avidità, ",
   "iti1:3.4": "vedendo chiaramente la si abbandona. ",
-  "iti1:3.5": "Una volta che la si ha abbandonata, non si ritorna ",
+  "iti1:3.5": "Una volta che la si ha abbandonata, non si torna ",
   "iti1:3.6": "più in questo mondo.” ",
   "iti1:4.1": "Anche questo tema è stato enunciato dal Buddha. Così ho udito. "
 }
