Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig7.3_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig7.3_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig7.3_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "thig7.3:1.4": "den Bösewichte nicht pflegen.“ ",
   "thig7.3:2.1": "„Warum billigst du die Wiedergeburt nicht? ",
   "thig7.3:2.2": "Wenn du geboren bist, kannst du Sinnenfreuden genießen. ",
-  "thig7.3:2.3": "Ergötze dich an sinnlichem Vergnügen, ",
+  "thig7.3:2.3": "Ergötze dich an erotischer Wonne, ",
   "thig7.3:2.4": "damit du es später nicht bereust.“ ",
   "thig7.3:3.1": "„Zu denen, die geboren sind, kommt der Tod. ",
   "thig7.3:3.2": "Abhacken von Händen und Füßen, ",
