Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig11.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig11.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig11.1_translation-de-sabbamitta.json
@@ -44,7 +44,7 @@
   "thig11.1:10.4": "und die Anleitung des Buddha erfüllt. ",
   "thig11.1:11.1": "Sinnenfreuden sind wie Schwerter und Lanzen, ",
   "thig11.1:11.2": "die Aggregate sind der Hackklotz dazu. ",
-  "thig11.1:11.3": "Was du Vergnügen der Sinnenfreuden nennst, ",
+  "thig11.1:11.3": "Was du erotische Wonne nennst, ",
   "thig11.1:11.4": "ist für mich nun Quelle des Widerwillens. ",
   "thig11.1:12.1": "Genießen ist in jeder Hinsicht zerstört, ",
   "thig11.1:12.2": "und die Masse der Dunkelheit ist zerschmettert. ",
