Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/dhp/dhp33-43_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/dhp/dhp33-43_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/dhp/dhp33-43_translation-de-sabbamitta.json
@@ -37,7 +37,7 @@
   "dhp41:1": "Ach, allzu bald wird dieser Körper ",
   "dhp41:2": "auf der Erde liegen, ",
   "dhp41:3": "des Bewusstseins beraubt, ",
-  "dhp41:4": "weggeworfen wie ein nutzloses Stück Holz. ",
+  "dhp41:4": "weggeworfen wie ein wertloses Stück Holz. ",
   "dhp42:1": "Ein falsch ausgerichteter Geist ",
   "dhp42:2": "richtet mehr Schaden an, ",
   "dhp42:3": "als ein Feind seinem Feind antun kann ",
