Translations by sabbamitta to translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/kn/thig/thig14.1_translation-de-sabbamitta.json
@@ -110,7 +110,7 @@
   "thig14.1:27.2": "ohne diese Dinge kann er nicht fortbestehen. ",
   "thig14.1:27.3": "Da dies so ist: ",
   "thig14.1:27.4": "Woran könnte man den Geist festmachen? ",
-  "thig14.1:28.1": "Es ist, als ob du ein Wandbild siehst, ",
+  "thig14.1:28.1": "Als hättest du ein Bild gesehen, ",
   "thig14.1:28.2": "aufgemalt mit Auripigment, ",
   "thig14.1:28.3": "und dein Blick wird verwirrt ",
   "thig14.1:28.4": "und nimmt es fälschlich als einen Menschen wahr. ",
