Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti93:4.1": "Il fuoco dell’illusione brucia i confusi ",
   "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
   "iti93:4.3": "Non conoscendo questi fuochi ",
-  "iti93:4.4": "le persone si godono la vita ",
+  "iti93:4.4": "le persone si godono la propria esistenza ",
   "iti93:5.1": "per poi riempire l'inferno, ",
   "iti93:5.2": "e rinascere come animali, ",
   "iti93:5.3": "come asuras, o nel reame dei Peta (fantasmi), ",
