Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti93:4.1": "Il fuoco dell’illusione brucia i confusi ",
   "iti93:4.2": "che nel Dhamma dei nobili sono ottusi. ",
   "iti93:4.3": "Non conoscendo questi fuochi, ",
-  "iti93:4.4": "quelle persone che si deliziano di una propria essenza. ",
+  "iti93:4.4": "deliziandosi di una propria essenza, ",
   "iti93:5.1": "riempiono l’inferno, ",
   "iti93:5.2": "rinascono come animali, ",
   "iti93:5.3": "come titani (asura) o come spettri (peta), ",
