Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -24,7 +24,7 @@
   "iti93:7.4": "che conduce verso l’acutezza (nibbedha). ",
   "iti93:8.1": "Quegli avveduti che hanno estinto i fuochi, ",
   "iti93:8.2": "senza tregua, di giorno e di notte, ",
-  "iti93:8.3": "hanno raggiunto il completo parinibbāna, ",
+  "iti93:8.3": "hanno raggiunto il completo refrigerio (parinibbāna), ",
   "iti93:8.4": "hanno completamente trasceso la sofferenza. ",
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
   "iti93:9.2": "comprendendo correttamente (nel modo giusto ), ",
