Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -23,7 +23,7 @@
   "iti93:7.3": "e il fuoco dell’illusione con quella saggezza ",
   "iti93:7.4": "che conduce verso l’acutezza (nibbedha). ",
   "iti93:8.1": "Hanno soffiato via i fuochi, quegli avveduti, ",
-  "iti93:8.2": "con impegno, di giorno e di notte, ",
+  "iti93:8.2": "di giorno e di notte assidui, ",
   "iti93:8.3": "hanno raggiunto totale refrigerio (parinibbāna), ",
   "iti93:8.4": "hanno trasceso la sofferenza senza residuo. ",
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
