Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -24,7 +24,7 @@
   "iti93:7.4": "che conduce verso l’acutezza (nibbedha). ",
   "iti93:8.1": "Avendo soffiato via i fuochi, quegli avveduti, ",
   "iti93:8.2": "giorno e notte assidui, ",
-  "iti93:8.3": "raggiungono il totale refrigerio (parinibbāna) ",
+  "iti93:8.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
   "iti93:8.4": "e trascendono la sofferenza senza residui. ",
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
   "iti93:9.2": "comprendendo correttamente (nel modo giusto ), ",
