Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -29,5 +29,5 @@
   "iti93:9.1": "I saggi dalla somma sapienza, che vedono ciò che è nobile, ",
   "iti93:9.2": "comprendendo correttamente (nel modo giusto ), ",
   "iti93:9.3": "con la conoscenza superiore della distruzione della nascita, ",
-  "iti93:9.4": "non ritornano più a nuova esistenza.” "
+  "iti93:9.4": "non tornano più a nuova esistenza.” "
 }
